; ModuleID = '/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-imx-irqsteer.c_imx_irqsteer_irq_map.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-imx-irqsteer.c_imx_irqsteer_irq_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_domain = type { i32 }

@IRQ_LEVEL = common dso_local global i32 0, align 4
@imx_irqsteer_irq_chip = common dso_local global i32 0, align 4
@handle_level_irq = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.irq_domain*, i32, i32)* @imx_irqsteer_irq_map to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @imx_irqsteer_irq_map(%struct.irq_domain* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.irq_domain*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.irq_domain* %0, %struct.irq_domain** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* @IRQ_LEVEL, align 4
  %9 = call i32 @irq_set_status_flags(i32 %7, i32 %8)
  %10 = load i32, i32* %5, align 4
  %11 = load %struct.irq_domain*, %struct.irq_domain** %4, align 8
  %12 = getelementptr inbounds %struct.irq_domain, %struct.irq_domain* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @irq_set_chip_data(i32 %10, i32 %13)
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* @handle_level_irq, align 4
  %17 = call i32 @irq_set_chip_and_handler(i32 %15, i32* @imx_irqsteer_irq_chip, i32 %16)
  ret i32 0
}

declare dso_local i32 @irq_set_status_flags(i32, i32) #1

declare dso_local i32 @irq_set_chip_data(i32, i32) #1

declare dso_local i32 @irq_set_chip_and_handler(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
